--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="var-let-const.js"></script>
+    <script src="promis.js"></script>
   </body>
 </html>
