--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- <img id="test" src="https://codingapple1.github.io/kona.jpg" /> -->
   </head>
   <body>
     <script src="promis.js"></script>
