--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <!-- <img id="test" src="https://codingapple1.github.io/kona.jpg" /> -->
   </head>
   <body>
-    <script src="templateliterals.js"></script>
+    <script src="callback.js"></script>
   </body>
 </html>
